# src/controllers/CreateUserController.ts
@@ -1,0 +1,28 @@
+import { Request, Response } from "express";
+import { CreateUserService } from "../services/CreateUserService";
+
+class CreateUserController {
+  async handle(request: Request, response: Response) {
+    const {
+      company_id,
+      email,
+      password,
+      name,
+      access_level,
+      active } = request.body;
+
+    const createUserService = new CreateUserService();
+    const user = await createUserService.execute({
+      company_id,
+      email,
+      password,
+      name,
+      access_level,
+      active
+    })
+
+    return response.json(user);
+  }
+}
+
+export { CreateUserController };
